Fixed #48: bmz middle aligning (

--- a/exeapp/static/css/styles/bmz/sass/content.scss
+++ b/exeapp/static/css/styles/bmz/sass/content.scss
@@ -140,6 +140,11 @@ header {
         }
 	}
 
+  .middle {
+    float: left;
+    width: 728px;
+  }
+
 	article {
 		width:728px;
 		float:left;
